frontend/src/app/edit/edit.component.scss
@import '../../styles.scss';
$header-height: 126px;
$sidebar-content-width: 225px;
$page-width: 21cm;
$page-height: 29.7cm;

.container {
    width: 100%;
    background-color: #6F6F6F;
}

.header {
    position: fixed;
    display: flex;
    width: 100%;
    justify-content: space-between;
    margin: 0;
    z-index: 0;
    background-image: linear-gradient(to right, #ffffff, #e7e7e7);
    border-bottom: 1px solid #ccc;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    width: 100%;
    top: 0;
    left: 0;
}


.titleWrapper {
    position: fixed;
    display: flex;
    margin: 10px;
    margin-left: 20px;
    height: 52px;
    width: 100%;
}

.docTitleWrapper {
    display: flex;
    margin-left: 10px;
}

.speedDialEditMenu {
    z-index: 9;
    margin-right: 100px;
    margin-top: 24px;

}

.toolsWrapper {
    display: flex;
    padding-bottom: 0;
    margin-top: 71px;
    margin-left: 10px;
    width: 100vw;
}

.documentTitle {
    margin: auto;
    font-size: 22px;
    font-weight: bold;
    border: 1px solid #00000000;
    border-radius: 5px;
    transition: 0.3s;
    background-color: #00000000;
    width: 35vw;
    max-width: 300px;
    min-width: 200px;
}

@media only screen and (max-width: 360px) {
    .documentTitle {
        min-width: 100px;

    }
}

.documentTitle:hover {
    border: 1px solid #000000;
}

.documentTitle:focus {
    border: 1px solid #000000 !important;
}

.tool {
    padding: 5px;
    margin: 5px;
    border-radius: 5px;
    transition: 0.5s;
}

.tool img {
    width: 30px;
    height: 30px;
}

.tool:hover {
    cursor: pointer;
    background-color: $light-grey;
}

.dropdownWrapper {
    margin: 10px;
}

.dropdownInput {
    display: flex;
    transition: 0.5s;
    margin: 0;
    background-color: lighten($light-grey, 10%);
    padding: 5px;
    border-radius: 5px;
}

.dropdownText {
    margin: auto;
    white-space: nowrap;
}

.dropdownContent {
    display: none;
    transition: 0.5s;
    position: fixed;
    background-color: lighten($light-grey, 10%);
    min-width: 100px;
    margin-left: 15px;
    margin-top: -15px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;

    border-radius: 5px;
}

.dropdownInput:hover {
    cursor: pointer;
    background-color: darken($light-grey, 10%);
}

.dropdownOptions {
    margin: 0;
    padding: 0;
    border-radius: 5px;
    vertical-align: middle;
}

.dropdownIcon1 {
    margin: auto;
    height: 20px;
    margin-left: 0;
    margin-right: 5px;
}

.dropdownIcon2 {
    margin: auto;
    height: 20px;
    margin-left: 2px;
    margin-right: 7px;
}

.uploadAssetIcon:hover .dropdownContent {
    display: block;
    cursor: pointer;
}

.logoWrapper {
    height: 52px;
}

.logoWrapper:hover {
    cursor: pointer;
}



.logo {
    width: 50px;
}

.exitEditPage {
    margin: auto;
    margin-right: 50px;
}

.editor {
    transition: 0.5s;
    display: flex;
    position: absolute;
    top: $header-height;
    left: 260px;

    //     height: 100vh;
    z-index: -10;
    margin: 0;
    overflow: auto;
    // flex-grow: 1;

    width: calc(100% - 260px);
    // width: 100%;
    max-height: calc(100svh - $header-height);
}






.assetSidebar {
    transition: 0.5s;
    position: fixed;
    top: $header-height;
    left: 0;
    bottom: 0;
    width: 261px;
    background-color: #ffffff;
    border-right: 1px solid #c7c7c7;
    box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.1);
    overflow-y: auto;
    z-index: -10000;
}

.alignDiv {
  margin-bottom:-35px;
}

.pageName {
    width: 100%;
    height: 100%;
    position: relative;
    top: 50px;
    left: 100px;
}

div[contenteditable="true"]:focus {
    outline: none;

}

.sidebarHeaderWrapper {
    background-color: #ffffff;
    width: 252px;
    position: fixed;
}

.sidebarHeader {
    display: flex;
    justify-content: space-evenly;
    margin: auto;
    width: $sidebar-content-width;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.sidebarHeaderText {
    margin: auto;
    font-size: 28px;
    font-weight: bold;
    width: 100%;
}

.sidebarHeaderTextWrapper {
    margin: auto;
    margin-left: 40px;
    text-align: justify;
}

.sidebarHeaderIconWrapper {
    border-radius: 5px;
    padding: 5px;
    display: flex;
    margin: 15px;
    margin-right: 0px;
}

.backWrapper {
    margin-left: 0px !important;
}

.sidebarHeaderIcon {
    margin: auto;
    width: 25px;
}

.sidebarHeaderIconWrapper:hover {
    cursor: pointer;
    background-color: $light-grey;
}

.assetSidebar hr {
    border: 1px solid #c7c7c7;
    margin: auto;
    width: $sidebar-content-width;
}

.alignDiv {
    height: 122px;
}

.assetWrapper {
    margin: auto;
    width: $sidebar-content-width;
    height: 157px;
    border-radius: 8px;
    background-color: #f0f0f0;
    margin-bottom: 20px;
}

.assetHeader {
    display: flex;
    padding: 10px;
}

.assetNameText {
    padding-left: 10px;
    max-width: 100px;
    margin: auto;
    font-size: 15px;
    font-weight: bold;
    border: 1px solid #00000000;
    border-radius: 5px;
    transition: 0.3s;
    background-color: #00000000;
}

.assetNameText:hover {
    border: 1px solid #000000;
}

.copyAsset,
.copyTextAsset {
    margin-left: 10px;
}

.deleteAsset {
    margin-right: 0;
    margin-left: auto;
}

.deleteAsset,
.copyAsset,
.copyTextAsset {
    border-radius: 5px;
    // display:flex;
    width: 30px;
    height: 30px;
    padding: 5px;
}

.deleteAssetHover:hover,
.copyAsset:hover,
.copyTextIconWrapper:hover,
.copyTextAsset:hover {
    cursor: pointer;
    background-color: darken($light-grey, 10%);
}

.deleteAssetIcon,
.copyAssetIcon,
.copyTextIcon {
    margin: auto;
    width: 20px;
    height: 20px;
}

.assetContent {
    display: flex;
    margin: 10px;
    margin-top: 0;
}
/* ... */

